--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ avatar: https://cdn.discordapp.com/attachments/397543517980983296/84674025840089
 #  email:
 #  facebook:
 #  flickr:
-#  github:
+#  github: https://github.com/syriannewsblog
 #  instagram:
 #  linkedin:
 #  pinterest:
