--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ avatar: https://cdn.discordapp.com/attachments/397543517980983296/84674025840089
 #  email:
 #  facebook:
 #  flickr:
-#  github:https://github.com/syriannewsblog
+#  github:
 #  instagram:
 #  linkedin:
 #  pinterest:
 #  rss: # just type anything here for a working RSS icon
-#  twitter:
+#  twitter:https://twitter.com/rickastley?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor
 #  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 #  youtube: # channel/<your_long_string> or user/<user-name>
 #  googleplus: # anything in your profile username that comes after plus.google.com/
